# src/routes/userRoutes.js
@@ -8,6 +8,7 @@ router.post('/', userController.createUser);
 router.get('/:id', userController.getUser);
 router.put('/:id', userController.updateUser);
 router.put('/:id/update', userController.updateUserV2);
+router.put('/:id/update-v2', userController.updateUserNameV2);
 router.delete('/:id', userController.deleteUser);
 
 export default router; // Export the router directly
